# llm-collector

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/: main.py  requirements.txt
